--- a/kernel/kernel.vcxproj
+++ b/kernel/kernel.vcxproj
@@ -19,7 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="royston-vasey.c" />
+    <ClCompile Include="init\init.c" />
+    <ClCompile Include="libc\libc.c" />
+    <ClCompile Include="drivers\ports.c" />
+    <ClCompile Include="drivers\screen.c" />
+    <ClCompile Include="entry-point.c" />
+    <ClCompile Include="util\util.c" />
   </ItemGroup>
   <ItemGroup>
     <None Include="boot\boot-loader\boot-loader.asm" />
@@ -29,6 +34,15 @@
     <None Include="boot\kernel-entry.asm" />
     <None Include="boot\boot-loader\print-string.asm" />
     <None Include="boot\boot-loader\enter-protected-mode.asm" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="init\init.h" />
+    <ClInclude Include="libc\freestanding-includes.h" />
+    <ClInclude Include="libc\libc.h" />
+    <ClInclude Include="drivers\ports.h" />
+    <ClInclude Include="drivers\screen.h" />
+    <ClInclude Include="libc\typedefs.h" />
+    <ClInclude Include="util\util.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
